[package]
name = "lh"
version = "0.1.0"
edition = "2021"
description = "List handsomely customizable ls command work in progress" 
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
colored = "2.1.0"
serde = "1.0.195"
serde_derive = "1.0.195"
toml = "0.8.8"
