[package]
name = "lh"
authors = ["Kamil Utku Mavi <kamilutkumavi0@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "List handsomely customizable ls command work in progress"
readme = "README.md"
repository = "https://github.com/kamilutkumavi0/lh"
license = "MIT"
documentation = "https://docs.rs/lh/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
colored = "2.1.0"
home = "0.5.9"
serde = "1.0.195"
serde_derive = "1.0.195"
terminal_size = "0.3.0"
toml = "0.8.8"
